--- a/css/style.css
+++ b/css/style.css
@@ -222,3 +222,13 @@ header {
     height: 1rem;
     width: 1rem;
 }
+
+.splash {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: var(--var-white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
