--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ header {
 
 .search-input {
     border-radius: 0.3rem;
-    border: none;
+    border: 0.165rem solid var(--var-gray-color);
     height: 2.25rem;
     padding: 0.75rem 0.5rem;
     width: 32.375rem;
