fix: add css for load more button and fix task render on filter

--- a/css/common.css
+++ b/css/common.css
@@ -32,7 +32,8 @@ textarea {
 .button,
 .button-icon,
 .button-primary,
-.button-secondary {
+.button-secondary,
+.button-ternary {
     cursor: pointer;
     font-weight: var(--var-font-weight-500);
     border-radius: 0.3rem;
