--- a/css/style.css
+++ b/css/style.css
@@ -189,10 +189,6 @@ header {
     width: 100%;
 }
 
-.hide {
-    display: none;
-}
-
 .success-message,
 .error-message {
     border-radius: 0.31rem;
@@ -229,4 +225,18 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.load-more-button {
+    display: block;
+    margin: 3.56rem auto;
+    padding: 0.56rem 1.25rem;
+    font-size: 1rem;
+    color: var(--var-white-color);
+    background: var(--var-black-color);
+    border: none;
+}
+
+.hide {
+    display: none;
 }
